--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,8 +21,8 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: 16.13.2
-        cache: 'npm'
+        node-version: '14'
+        
     - name: emsdk 
       run: |
         git clone https://github.com/emscripten-core/emsdk.git
