--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,3 +36,7 @@ jobs:
         npm install
         make
         ls -alh
+    - uses: actions/upload-artifact@v2
+      with:
+        name: my-imgui-js
+        path: imgui/examples/example_sdl_opengl2/example-linux/
